# classic-todo-app

server/: .ruff.toml  app.py  config.py  create_db.py  db.py  id  models.py  pyproject.toml
server/src/server/: Task.py
todo-app/: package-lock.json  package.json
todo-app/app/: page.js
todo-app/components/: AddTodoItemButton.component.jsx  AddTodoItemForm.component.jsx  CompletedTodoSection.component.jsx  Console.component.jsx  TodoItem.component.jsx  TodoSection.component.jsx
todo-app/components/base/: Button.component.jsx  Checkbox.component.jsx  Dialog.component.jsx  TextArea.component.jsx  TextInput.component.jsx
