[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "aaweaver-actuary", email = "andrewayersweaver+github@gmail.com" }
]
dependencies = [
    "flask>=3.0.3",
    "flask-cors>=4.0.1",
    "flask-marshmallow>=1.2.1",
    "webargs>=8.4.0",
    "ruff>=0.4.6",
    "ruff-lsp>=0.0.53",
    "fastavro>=1.9.4",
    "pydantic>=2.7.2",
    "uuid>=1.30",
    "flask-sqlalchemy>=3.1.1",
    "marshmallow-sqlalchemy>=1.0.0",
    "sqlmodel>=0.0.18",
    "ipython>=8.24.0",
    "pandas>=2.2.2",
    "duckdb>=0.10.3",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/server"]
